catkinize rtshell rtsprofile and rtctree

--- a/rtshell/CMakeLists.txt
+++ b/rtshell/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(NOT ("$ENV{ROS_Distributions}" STREQUAL "electric" OR "$ENV{ROS_DISTRO}" STREQUAL "fuerte"))
+  include(catkin.cmake)
+  return()
+endif()
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
@@ -9,7 +13,7 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
-# Build hrpsys before rtmbuild_init
+# Build rtshell
 execute_process(COMMAND cmake -E chdir ${PROJECT_SOURCE_DIR} make -f Makefile installed
                 RESULT_VARIABLE _make_failed)
 if (_make_failed)
