--- a/openrtm_aist_python/CMakeLists.txt
+++ b/openrtm_aist_python/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(NOT ("$ENV{ROS_Distributions}" STREQUAL "electric" OR "$ENV{ROS_DISTRO}" STREQUAL "fuerte"))
+  include(catkin.cmake)
+  return()
+endif()
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
@@ -11,8 +15,7 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 rosbuild_init()
 
-# openrtm-c++ is installed via apt-get system
-# Build OpenHRP3
+# Build openrtm_aist_python
 execute_process(COMMAND cmake -E chdir ${PROJECT_SOURCE_DIR} make -f Makefile.openrtm_aist_python
                 RESULT_VARIABLE _make_failed)
 if (_make_failed)
