--- a/rtctree/Makefile
+++ b/rtctree/Makefile
@@ -1,7 +1,7 @@
 EXTRA_CMAKE_FLAGS = -DUSE_ROSBUILD:BOOL=1
 include $(shell rospack find mk)/cmake.mk
 
-INSTALL_DIR = `rospack find rtctree`
+INSTALL_DIR = ${CURDIR}
 SOURCE_DIR  = build/rtctree-3.0.0
 TARBALL     = build/rtctree-3.0.0.zip
 TARBALL_URL = https://github.com/gbiggs/rtctree/archive/3.0.0.zip
