--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -16,7 +16,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>openrtm_aist</build_depend>
+  <build_depend>openrtm_aist_python</build_depend>
   <run_depend>openrtm_aist</run_depend>
+  <run_depend>openrtm_aist_python</run_depend>
   <!-- <test_depend>openrtm_aist</test_depend> -->
 
   <export>
