--- a/openrtm_aist_python/Makefile.openrtm_aist_python
+++ b/openrtm_aist_python/Makefile.openrtm_aist_python
@@ -1,6 +1,6 @@
 all: installed
 
-INSTALL_DIR = `rospack find openrtm_aist_python`
+INSTALL_DIR = ${CURDIR}
 FILENAME    = OpenRTM-aist-Python-1.1.0-RC1.tar.gz
 TARBALL     = build/$(FILENAME)
 TARBALL_URL = http://www.openrtm.org/pub/OpenRTM-aist/python/1.1.0/$(FILENAME)
