remove rospack command from packages, cp download_checkmd5.py, download_unpack_uild.mk and svn_checkout.mk from mk package

--- a/rtshell/CMakeLists.txt
+++ b/rtshell/CMakeLists.txt
@@ -14,7 +14,7 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
 # Build rtshell
-execute_process(COMMAND cmake -E chdir ${PROJECT_SOURCE_DIR} make -f Makefile installed
+execute_process(COMMAND cmake -E chdir ${PROJECT_SOURCE_DIR} make -f Makefile.rtshell installed
                 RESULT_VARIABLE _make_failed)
 if (_make_failed)
   message(FATAL_ERROR "Build of failed")
