--- a/openhrp3/Makefile.openhrp3
+++ b/openhrp3/Makefile.openhrp3
@@ -6,7 +6,7 @@ SVN_PATCH = patch/OpenHRP2ModelFile.patch patch/ColladaWriter_inertia.patch
 # https://openrtp.jp/redmine/issues/2154, https://openrtp.jp/redmine/issues/2162
 
 
-include $(shell rospack find mk)/svn_checkout.mk
+include $(CURDIR)/svn_checkout.mk
 
 installed: $(SVN_DIR) patched
 	cd $(SVN_DIR) && PATH=`rospack find openrtm_aist`/bin:$(PATH) cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DENABLE_INSTALL_RPATH_TO_SELF=ON -DCOMPILE_JAVA_STUFF=OFF && make && make install
