--- a/openrtm_aist/Makefile.openrtm_aist
+++ b/openrtm_aist/Makefile.openrtm_aist
@@ -8,7 +8,7 @@ SOURCE_DIR  = build/OpenRTM-aist-1.1.0
 TARBALL_PATCH = patch/Manager.cpp.patch2 patch/ArtEC-1.1.0.patch 
 UNPACK_CMD  = tar xzf
 MD5SUM_FILE = $(FILENAME).md5sum
-include $(shell rospack find mk)/download_unpack_build.mk
+include ${CURDIR}/download_unpack_build.mk
 
 installed: $(SOURCE_DIR)/unpacked
 	cd $(SOURCE_DIR) && ./configure --enable-debug --prefix=$(CURDIR) && make && make install
