--- a/openrtm_aist_python/Makefile.openrtm_aist_python
+++ b/openrtm_aist_python/Makefile.openrtm_aist_python
@@ -7,7 +7,8 @@ TARBALL_URL = http://www.openrtm.org/pub/OpenRTM-aist/python/1.1.0/$(FILENAME)
 SOURCE_DIR  = build/OpenRTM-aist-Python-1.1.0
 UNPACK_CMD  = tar xzf
 MD5SUM_FILE = $(FILENAME).md5sum
-include $(shell rospack find mk)/download_unpack_build.mk
+
+include ${CURDIR}/download_unpack_build.mk
 PYTHONDIR   = `python -c 'import sys; print "python%s"%sys.version[:3]'`
 
 installed: $(SOURCE_DIR)/unpacked
