--- a/openrtm_aist_python/package.xml
+++ b/openrtm_aist_python/package.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>openrtm_aist_python</name>
-  <version>1.1.0</version>
-  <description>The openrtm_aist_python package</description>
+  <version>3.1.4</version>
+  <description>The openrtm_aist_python package
+
+   Version was bumped from 1.1.0 when the package was catkinized and released into ROS buildfarm via bloom.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
