--- a/rtshell/package.xml
+++ b/rtshell/package.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>rtshell</name>
-  <version>3.0.0</version>
-  <description>The rtshell package</description>
+  <version>3.1.4</version>
+  <description>The rtshell package
+
+   Version was bumped from 3.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
