--- a/rtsprofile/package.xml
+++ b/rtsprofile/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <name>rtsprofile</name>
-  <version>2.0.0</version>
+  <version>3.1.4</version>
 
-  <description>The rtsprofile package</description>
+  <description>The rtsprofile package
+
+   Version was bumped from 2.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
