--- a/openrtm_aist/package.xml
+++ b/openrtm_aist/package.xml
@@ -45,6 +45,8 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>omniorb</build_depend>
+  <run_depend>omniorb</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
