Correct the name of wrong dependency name.

--- a/openrtm_common/package.xml
+++ b/openrtm_common/package.xml
@@ -19,7 +19,7 @@
   <run_depend>openrtm_aist</run_depend>
   <run_depend>rtctree</run_depend>
   <run_depend>rtsprofile</run_depend>
-  <run_depend>tshell</run_depend>
+  <run_depend>rtshell</run_depend>
 
   <export>
     <metapackage/>
