--- a/openrtm_aist/package.xml
+++ b/openrtm_aist/package.xml
@@ -14,7 +14,10 @@
   <url type="website">http://ros.org/wiki/openrtm_aist</url>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>unzip</build_depend>
   <build_depend>omniorb</build_depend>
+
   <run_depend>omniorb</run_depend>
 
   <export>
