--- a/openrtm_aist_python/package.xml
+++ b/openrtm_aist_python/package.xml
@@ -15,6 +15,9 @@
   <url type="website">http://ros.org/wiki/openrtm_aist_python</url> -->
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>unzip</build_depend>
+
   <build_depend>python-omniorb</build_depend>
   <run_depend>python-omniorb</run_depend>
 
