--- a/openrtm_aist/package.xml
+++ b/openrtm_aist/package.xml
@@ -16,6 +16,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>unzip</build_depend>
+  <build_depend>uuid</build_depend>
   <build_depend>omniorb</build_depend>
 
   <run_depend>omniorb</run_depend>
