--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -21,6 +21,7 @@
   <build_depend>f2c</build_depend>
   <build_depend>openrtm_aist</build_depend>
   <build_depend>openrtm_aist_python</build_depend>
+  <build_depend>subversion</build_depend>
 
   <run_depend>atlas</run_depend>
   <run_depend>boost</run_depend>
