add dpened to omniidl for python

--- a/rtctree/package.xml
+++ b/rtctree/package.xml
@@ -17,6 +17,8 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>unzip</build_depend>
+  <build_depend>omniidl</build_depend>
+  <build_depend>python-omniorb</build_depend>
 
   <export/>
 
