--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -19,6 +19,7 @@
   <build_depend>boost</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>f2c</build_depend>
+  <build_depend>libjpeg</build_depend>
   <build_depend>openrtm_aist</build_depend>
   <build_depend>openrtm_aist_python</build_depend>
   <build_depend>subversion</build_depend>
@@ -27,6 +28,7 @@
   <run_depend>boost</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>f2c</run_depend>
+  <run_depend>libjpeg</run_depend>
   <run_depend>openrtm_aist</run_depend>
   <run_depend>openrtm_aist_python</run_depend>
   <!-- <test_depend>openrtm_aist</test_depend> -->
