--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -17,18 +17,23 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>atlas</build_depend>
   <build_depend>boost</build_depend>
+  <build_depend>collada-dom</build_depend>
+  <build_depend>doxygen</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>f2c</build_depend>
   <build_depend>libjpeg</build_depend>
+  <build_depend>zlib</build_depend>
   <build_depend>openrtm_aist</build_depend>
   <build_depend>openrtm_aist_python</build_depend>
   <build_depend>subversion</build_depend>
 
   <run_depend>atlas</run_depend>
   <run_depend>boost</run_depend>
+  <run_depend>collada-dom</run_depend>
   <run_depend>eigen</run_depend>
   <run_depend>f2c</run_depend>
   <run_depend>libjpeg</run_depend>
+  <run_depend>zlib</run_depend>
   <run_depend>openrtm_aist</run_depend>
   <run_depend>openrtm_aist_python</run_depend>
   <!-- <test_depend>openrtm_aist</test_depend> -->
