--- a/openhrp3/Makefile.openhrp3
+++ b/openhrp3/Makefile.openhrp3
@@ -9,7 +9,7 @@ SVN_PATCH = patch/OpenHRP2ModelFile.patch patch/ColladaWriter_inertia.patch
 include $(CURDIR)/svn_checkout.mk
 
 installed: $(SVN_DIR) patched
-	cd $(SVN_DIR) && PATH=`rospack find openrtm_aist`/bin:$(PATH) cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DENABLE_INSTALL_RPATH_TO_SELF=ON -DCOMPILE_JAVA_STUFF=OFF && make && make install
+	cd $(SVN_DIR) && cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DENABLE_INSTALL_RPATH_TO_SELF=ON -DCOMPILE_JAVA_STUFF=OFF && make && make install
 	#
 	# add link
 	ln -sf $(CURDIR)/lib/SimulationEC.so $(CURDIR)/lib/libSimulationEC.so
