--- a/openhrp3/Makefile.openhrp3
+++ b/openhrp3/Makefile.openhrp3
@@ -3,6 +3,7 @@ SVN_DIR     = build/OpenHRP-3.1
 SVN_URL     = https://openrtp.jp/svn/hrg/openhrp/3.1/trunk
 #SVN_REVISION = -r@REVISION@
 SVN_PATCH = patch/OpenHRP2ModelFile.patch patch/ColladaWriter_inertia.patch
+SVN_CMDLINE = svn --non-interactive --trust-server-cert 
 # https://openrtp.jp/redmine/issues/2154, https://openrtp.jp/redmine/issues/2162
 
 
