Splitting openrtm_common into four separate packages incl. 2 metapackages.

--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -8,7 +8,9 @@
   </description>
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
   <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
-  <author>AIST</author>
+  <author>Humanoid Resarch Group and Task-Intelligence Research Group at AIST</author>
+  <author>Nakamura Lab, Dept. of Mechano Informatics, University of Tokyo</author>
+  <author>General Robotix, Inc</author>
 
   <license>EPL</license>
 
