--- a/rtshell_core/rtctree/package.xml
+++ b/rtshell_core/rtctree/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <name>rtctree</name>
-  <version>3.1.5</version>
-  <description>The rtctree package.
-
-   Version was bumped from 3.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
+  <version>1.0.0</version>
+  <description>
+   <p>API for interacting with running RT-Components and managing RTM-based systems using OpenRTM-aist.</p>
   </description>
 
   <maintainer email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</maintainer>
   <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
+  <author email="git@killbots.net">Geoffrey Biggs</author>
   <author email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</author>
 
   <license>EPL</license>
