--- a/rtshell_core/rtshell/package.xml
+++ b/rtshell_core/rtshell/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <name>rtshell</name>
-  <version>3.1.5</version>
-  <description>The rtshell package
-
-   Version was bumped from 3.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
+  <version>1.0.0</version>
+  <description>
+   <p>Shell commands for managing RT-Middleware running on OpenRTM-aist.</p>
   </description>
 
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
   <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
+  <author email="git@killbots.net">Geoffrey Biggs</author>
   <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
 
   <license>EPL</license>
