--- a/openhrp3/Makefile.openhrp3
+++ b/openhrp3/Makefile.openhrp3
@@ -16,7 +16,7 @@ installed: $(SVN_DIR) patched
 	cd $(SVN_DIR) && cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DENABLE_INSTALL_RPATH_TO_SELF=ON -DCOMPILE_JAVA_STUFF=OFF && make VERBOSE=1 && make install
 	#
 	# add link
-	ln -sf $(CURDIR)/lib/SimulationEC.so $(CURDIR)/lib/libSimulationEC.so
+	ln -sf SimulationEC.so $(CURDIR)/lib/libSimulationEC.so
         #
 	touch installed
 
