--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -11,6 +11,9 @@
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
   <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
   <author>AIST</author>
+  <author>General Robotix Inc.</author>
+  <author>Nakamura Lab, Dept. of Mechano Informatics, University of Tokyo</author>
+  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
 
   <license>EPL</license>
 
