--- a/openhrp3/Makefile.openhrp3
+++ b/openhrp3/Makefile.openhrp3
@@ -1,4 +1,4 @@
-INSTALL_DIR = $(CURDIR)
+INSTALL_DIR ?= $(CURDIR)
 SVN_DIR     = build/OpenHRP-3.1
 SVN_URL     = https://openrtp.jp/svn/hrg/openhrp/3.1/trunk
 #SVN_REVISION = -r@REVISION@
@@ -13,10 +13,11 @@ installed: $(SVN_DIR) patched
 	@echo "compile openhrp3 ... "
 	@echo "                 PATH=$(PATH)"
 	@echo "                 INSTALL_DIR=$(INSTALL_DIR)"
+	@echo "                 OPENRTM_DIR=$(OPENRTM_DIR)"
 	cd $(SVN_DIR) && cmake . -DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) -DENABLE_INSTALL_RPATH=ON -DENABLE_INSTALL_RPATH_TO_SELF=ON -DCOMPILE_JAVA_STUFF=OFF && make VERBOSE=1 && make install
 	#
 	# add link
-	ln -sf SimulationEC.so $(CURDIR)/lib/libSimulationEC.so
+	ln -sf SimulationEC.so $(INSTALL_DIR)/lib/libSimulationEC.so
         #
 	touch installed
 
