--- a/openrtm_aist_core/openrtm_aist_core/package.xml
+++ b/openrtm_aist_core/openrtm_aist_core/package.xml
@@ -4,6 +4,8 @@
   <version>1.1.0</version>
   <description>
    <p>Metapackage that contains commonly used <a href = "http://ieeexplore.ieee.org/xpl/login.jsp?tp=&amp;arnumber=1545521&amp;url=http%3A%2F%2Fieeexplore.ieee.org%2Fiel5%2F10375%2F32977%2F01545521.pdf%3Farnumber%3D1545521">RT-Middleware</a>-based modules. Althogh each of these packages by themselves are ROS-agnostic, you can use them over ROS together with the packages in <a href = "http://www.ros.org/wiki/rtmros_common">rtmros_common</a>.</p>
+
+   <p>Its development is happening at <a href = "http://www.openrtm.org/pub/OpenRTM-aist/">openrtm.org/pub/OpenRTM-aist</a>. The repository listed below is that of its ROS wrapper.</p>
   </description>
 
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
