--- a/openrtm_aist_core/openrtm_aist_python/package.xml
+++ b/openrtm_aist_core/openrtm_aist_python/package.xml
@@ -5,7 +5,7 @@
   <description>
    <p>Python binding of OpenRTM-AIST (see <a href = "http://www.ros.org/wiki/openrtm_aist">openrtm_aist</a> for further information).</p>
 
-   <p>Note the its original development and maintainance is happening in AIST's repository. The URLs of the development repository and the issue tracker URLs shown is a port to rtm-ros-robotics project.</p>
+   <p>Its development is happening at <a href = "http://www.openrtm.org/pub/OpenRTM-aist/">openrtm.org/pub/OpenRTM-aist</a>. The repository listed below is that of its ROS wrapper.</p>
   </description>
 
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
