--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -4,7 +4,6 @@
   <description>
    <p>This package represents <a href = "http://www.openrtp.jp/openhrp3/en/index.html">OpenHRP3</a>. Although being ROS-agnostic by itself, you can use this via ROS together with the packages in <a href = "http://www.ros.org/wiki/rtmros_common">rtmros_common</a> that bridge between two framework.</p>
    <p><i>OpenHRP3 (Open Architecture Human-centered Robotics Platform version 3) is an integrated software platform for robot simulations and software developments. It allows the users to inspect an original robot model and control program by dynamics simulation. In addition, OpenHRP3 provides various software components and calculation libraries that can be used for robotics related software developments</i> (<a href = "http://www.openrtp.jp/openhrp3/en/about.html">excerpts from here</a>). </p>
-   <p>Note the its original development and maintainance is happening in undisclosed repository. The URLs of the development repository and the issue tracker URLs shown is a port to rtm-ros-robotics project.</p>
 
    <p>Its development is happening at <a href = "https://openrtp.jp/svn/hrg/openhrp/">openrtp.jp/svn/hrg/openhrp</a>. The repository listed below is that of its ROS wrapper.</p>
 
@@ -19,7 +18,7 @@
 
   <license>EPL</license>
 
-  <url type="website">https://openrtp.jp/svn/hrg/openhrp/3.1/trunk/</url>
+  <url type="website">https://openrtp.jp/svn/hrg/openhrp/</url>
   <url type="bugtracker">https://openrtp.jp/redmine/</url>
 
   <buildtool_depend>catkin</buildtool_depend>
