--- a/openhrp3/package.xml
+++ b/openhrp3/package.xml
@@ -1,13 +1,12 @@
 <package>
   <name>openhrp3</name>
-  <version>0.0.2</version>
+  <version>3.1.2</version>
   <description>
    <p>This package represents <a href = "http://www.openrtp.jp/openhrp3/en/index.html">OpenHRP3</a>. Although being ROS-agnostic by itself, you can use this via ROS together with the packages in <a href = "http://www.ros.org/wiki/rtmros_common">rtmros_common</a> that bridge between two framework.</p>
    <p><i>OpenHRP3 (Open Architecture Human-centered Robotics Platform version 3) is an integrated software platform for robot simulations and software developments. It allows the users to inspect an original robot model and control program by dynamics simulation. In addition, OpenHRP3 provides various software components and calculation libraries that can be used for robotics related software developments</i> (<a href = "http://www.openrtp.jp/openhrp3/en/about.html">excerpts from here</a>). </p>
 
-   <p>Its development is happening at <a href = "https://openrtp.jp/svn/hrg/openhrp/">openrtp.jp/svn/hrg/openhrp</a>. The repository listed below is that of its ROS wrapper.</p>
-
-   <p>Real version number, 3.1.4, is kept back until this discussion (http://code.google.com/p/rtm-ros-robotics/issues/detail?id=159) resolves. </p>
+   <p>This package is a wrapper of its upstream repository. Its development is happening at <a href = "https://openrtp.jp/svn/hrg/openhrp">code.google.com/p/hrpsys-base</a>.</p>
+   <p>The upstream version number to date is 3.1.4. Please refer to this discussion (http://code.google.com/p/rtm-ros-robotics/issues/detail?id=159) for the reason of this version conversion.</p>
   </description>
   <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
   <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
