--- a/openrtm_aist_core/openrtm_aist_python/Makefile.openrtm_aist_python
+++ b/openrtm_aist_core/openrtm_aist_python/Makefile.openrtm_aist_python
@@ -12,5 +12,5 @@ include ${CURDIR}/download_unpack_build.mk
 PYTHONDIR   = `python -c 'import sys; print "python%s"%sys.version[:3]'`
 
 installed: $(SOURCE_DIR)/unpacked
-	cd $(SOURCE_DIR) && python ./setup.py build && python ./setup.py install --prefix=$(INSTALL_DIR)
+	(cd $(SOURCE_DIR) && python ./setup.py build && python ./setup.py install --prefix=$(INSTALL_DIR)) > ${CURDIR}/compile.log 2>&1 || tail -100 ${CURDIR}/compile.log
 	touch installed
