--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ before_script: # Use this to prepare your build for testing e.g. copy database c
   - source /opt/ros/$ROS_DISTRO/setup.bash
 script: # All commands must exit with code 0 on success. Anything else is considered failure.
   - find . -type f | xargs egrep -i "(hoge|fuga)"
-  - catkin_make -j2
+  - catkin_make
 
